testdata/baselines/reference/submodule/compiler/jsFileMethodOverloads2.errors.txt
jsFileMethodOverloads2.js(41,15): error TS8009: The '?' modifier can only be used in TypeScript files.


==== jsFileMethodOverloads2.js (1 errors) ====
    // Also works if all @overload tags are combined in one comment.
    /**
     * @template T
     */
     class Example {
      /**
       * @param {T} value 
       */
      constructor(value) {
        this.value = value;
      }
    
      /**
       * @overload
       * @param {Example<number>} this
       * @returns {'number'}
       *
       * @overload
       * @param {Example<string>} this
       * @returns {'string'}
       *
       * @returns {string}
       */
      getTypeName() {
        return typeof this.value;
      }
    
      /**
       * @template U
       * @overload
       * @param {(y: T) => U} fn
       * @returns {U}
       *
       * @overload
       * @returns {T}
       *
       * @param {(y: T) => unknown} [fn]
       * @returns {unknown}
       */
      transform(fn) {
        return fn ? fn(this.value) : this.value;
                  ~
!!! error TS8009: The '?' modifier can only be used in TypeScript files.
      }
    }
    